--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -23,7 +23,7 @@ Order 类：
 public class Order {
     private Object orderInfo;
     private Integer userId;
-    
+
     public Object getOrderInfo() {
         return orderInfo;
     }
@@ -325,12 +325,14 @@ OrderService dynamicProxy = (OrderService) new OrderServiceDynamicProxy(new Orde
 ```
 由于继承了Proxy，所以可以调用父类的 h 参数 即：invocationhandler 参数，这个参数是在bind()这个方法中通过
  Proxy.newProxyInstance(cls.getClassLoader(), cls.getInterfaces(), this) 传入，这里的this 表示的是 OrderServiceDynamicProxy 但是 OrderServiceDynamicProxy这个类实现了Invocationhandler 所以this就是invocationhandler
- 
+
 所以在代理类的saveOrder方法中调用的super.h.invoke() 就是调用OrderServiceDynamicProxy类的重写的invoke();
 
 ********
 
-#### 3. 基于 cglib 实现的动态代理 - JAVA （待更新。。。）
+#### 3. 基于 cglib 实现的动态代理 - JAVA
+
+?> 待更新。。。
 
 ### 模板方法模式
 
