责任链模式

--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -6,6 +6,11 @@
 
 ![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
 
+## 一、创建型
+
+## 二、结构型
+
+
 ### 代理模式
 
 > 代理模式：为其他对象提供一种代理,以控制对这个对象的访问;
@@ -334,6 +339,9 @@ OrderService dynamicProxy = (OrderService) new OrderServiceDynamicProxy(new Orde
 
 ?> 待更新。。。
 
+
+## 三、行为型
+
 ### 模板方法模式
 
 > 模板方法模式：定义了一个算法的骨架,并允许子类为一个或者多个步骤提供实现;模板方法使得子类可以在不改变算法结构的情况下,重新定义算法的某些步骤。简而言之模板方法的目的是：让子类可以实现或者扩展父类中固定算法的某些部分。
@@ -446,8 +454,152 @@ public class Test {
 ![](https://ws4.sinaimg.cn/large/006tKfTcgy1g0cudqknuvj30qq0du40m.jpg)
 
 
+### 责任链模式
+
+> 为一个请求创建一个接收此次请求对象的一个链条。
+
+责任链模式的适用场景有：
+一个请求的处理需要一个或者多个其他对象进行辅助处理。
+
+如：
+
++ 在对检验信息进行交易的时候适合使用责任链模式
++ 在审批流程中适合使用责任链模式
 
 
+>假设有如下的业务场景：某视频网站需要对上架的视频课程进行审核（检查是否有手记和视频）如果都有则允许上架，没有则不允许上架，首先审核的是是否含有手记。
 
 
+课程实体类：
 
+```java
+public class Course {
+    private String name;
+    private String article;
+    private String video;
+    public String getName() {
+        return name;
+    }
+    public void setName(String name) {
+        this.name = name;
+    }
+    public String getArticle() {
+        return article;
+    }
+    public void setArticle(String article) {
+        this.article = article;
+    }
+    public String getVideo() {
+        return video;
+    }
+    public void setVideo(String video) {
+        this.video = video;
+    }
+    @Override
+    public String toString() {
+        return "Course{" +
+                "name='" + name + '\'' +
+                ", article='" + article + '\'' +
+                ", video='" + video + '\'' +
+                '}';
+    }
+}
+```
+
+责任链模式的核心类：
+
+```java
+/**
+ * 课程的批准者
+ *
+ * 所有的批准者都需要继承这个批准者
+ */
+public  abstract class Approver {
+    //这个类的核心是需要包含一个与自己相同类型的对象
+    protected Approver approver;
+
+    /**
+     * 设置下一个批准者
+     *
+     * @param approver
+     */
+    public void setNextApprover(Approver approver) {
+        this.approver = approver;
+    }
+
+    /**
+     * 发布课程,由子类实现.
+     *
+     * @param course
+     */
+    public abstract void deployCourse(Course course);
+}
+```
+
+分别有手记的审核类：
+
+```java
+/**
+ * 手记审批
+ */
+public class ArticleApprover extends Approver {
+    @Override
+    public void deployCourse(Course course) {
+        if (StringUtils.isNoneEmpty(course.getArticle())){
+            System.out.println(course.getName() + "包含手记, 审批通过");
+            if (approver != null){
+                approver.deployCourse(course);
+            }
+        }else{
+            System.out.println(course.getName() + "不包含手记, 审批不通过");
+            return;
+        }
+   }
+}
+```
+
+视频的审核类：
+
+```java
+/**
+ * 视频审批
+ */
+public class VideoApprover extends Approver {
+    @Override
+    public void deployCourse(Course course) {
+        if (StringUtils.isNoneEmpty(course.getVideo())){
+            System.out.println(course.getName() + "包含视频, 审批通过");
+            if (approver != null){
+                approver.deployCourse(course);
+            }
+        }else{
+            System.out.println(course.getName() + "不包含视频, 审批不通过");
+            return;
+        }
+   }
+}
+```
+
+客户端测试类：
+
+```java
+public class Test {
+    public static void main(String[] args) {
+        Approver articleApprover = new ArticleApprover();
+        Approver videoApprover = new VideoApprover();
+
+        Course course = new Course();
+        course.setName("java课程");
+        course.setArticle("java课程手记");
+        course.setVideo("java课程视频");
+
+        articleApprover.setNextApprover(videoApprover);
+        articleApprover.deployCourse(course);
+        
+        // 注意只有一个审核员发布
+        // 回循环调用,造成内存溢出
+        //videoApprover.setNextApprover(articleApprover);
+        //videoApprover.deployCourse(course);
+    }
+}
+```
