新增工厂方法模式

--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -8,6 +8,88 @@
 
 ## 一、创建型
 
+### 工厂方法模式
+
+> 定义一个专门创建对象的接口,让实现了这个接口的类来决定创建哪一个类的实例， **工厂方法让类的实例化过程推迟到子类中进行。**
+
+适用的场景：创建对象需要大量的重复代码，客户端无需依赖产品类的实例如何创建，和实现的细节等。
+
+**产品族和产品等级的概念**
+
++ **产品族:一个家电公司生产的多个家电(如:格力空调,格力冰箱,格力手机)是一个产品族；** 
++ **产品等级:格力手机，苹果手机，小米手机，他们是一个产品等级。**
+
+假设有如下的背景：
+如果创建一个Video对象很复杂，如果没需要一个Video对象是就需要重复写一遍创建的代码。可以考虑适应工厂方法。
+
+工厂方法需要一个产品类，和一个创建该类型的工厂类。
+
+抽象的产品类：
+
+```java
+public abstract class Video {
+    public abstract void produce();
+}
+```
+
+抽象的工厂类：
+
+```java
+//一般而言只有抽象方法时也可以使用interface代替抽象类
+//实际业务中类中可能不仅仅有抽象方法还有实现方法,此时使用抽象类比较合适
+public abstract class VideoFactory {
+    //该方法只是定义一个规范
+    public abstract Video getVideo();
+}
+```
+
+假设此时需要创建一个JavaVideo这种类时，需要做的是，创建一个JavaVideo的产品类和一个JavaVideoFactory的工厂类。
+
+JavaVideo产品类:
+
+```java
+public class JavaVideo extends Video {
+    @Override
+    public void produce() {
+        System.out.println("录制java课程视频");
+    }
+}
+```
+
+JavaVideoFactory工厂类:
+
+```java
+public class JavaVideoFactory extends VideoFactory {
+    @Override
+    public Video getVideo() {
+        return new JavaVideo();
+    }
+}
+```
+
+如果还有新的产品，只有再同样的增加产品类和对应的工厂类。
+
+```java
+/**
+ * 客户端只需知道产品对应的产品工厂,无需知道具体的产品和创建产品实例的过程
+ * 在新增一个产品的时候,只需要添加一个产品,和对应该产品的工厂,该过程无需修改已有的产品和工厂
+ * 对扩展是开放的,符合开闭原则.
+ */
+public class Test {
+    private static final Logger logger = LoggerFactory.getLogger(Test.class);
+    public static void main(String[] args) {
+        VideoFactory videoFactory = new PythonVideoFactory();
+        Video video = videoFactory.getVideo();
+        video.produce();
+
+        //只需要跟换产生具体产品的工厂即可;
+        VideoFactory videoFactory1 = new JavaVideoFactory();
+        Video video1 = videoFactory1.getVideo();
+        video1.produce();
+    }
+}
+```
+
 ## 二、结构型
 
 
