--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -1,12 +1,26 @@
+![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
+
 ![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
 
 ![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
 
 ![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
 
-![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
 
-## 一、创建型
+## 一、设计原则
+
+### 依赖倒置原则
+
+>+ 高层模块不应该依赖低层模块，两者都应该依赖抽象
+>+ 抽象不应该依赖细节
+>+ 细节应该依赖抽象
+
+高层是策略，低层是细节，他们都依赖于中间的抽象层，对于 **倒置** 的理解在于低层依赖了抽象层。
+
++ [参考资料1](https://www.jianshu.com/p/314b67f04e50)
++ [参考资料2](https://www.cnblogs.com/yulang314/p/3551586.html)
+
+## 二、创建型
 
 ### 工厂方法模式
 
@@ -90,7 +104,7 @@ public class Test {
 }
 ```
 
-## 二、结构型
+## 三、结构型
 
 
 ### 代理模式
