--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -1,10 +1,10 @@
-![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
+![7大设计原则](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
 
-![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
+![设计模式-创建型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
 
-![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
+![设计模式-结构型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
 
-![](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
+![设计模式-行为型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
 
 
 ## 一、设计原则
