--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -1,3 +1,8 @@
+# 开篇 | 这一次，让我们一起来搞懂设计模式
+余浩 2018-11-12<br/><br/>
+
+![](https://static001.geekbang.org/resource/image/58/de/586df7bffcd89e32f9ec7b144bf0a4de.jpg)
+
 ![7大设计原则](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
 
 ![设计模式-创建型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
@@ -5,7 +10,6 @@
 ![设计模式-结构型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
 
 ![设计模式-行为型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
-
 
 ## 一、设计原则
 
