--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -1,17 +1,8 @@
-# 开篇 | 这一次，让我们一起来搞懂设计模式
-余浩 2018-11-12<br/><br/>
-
+# 掌握 | 这一次，让我们一起来搞懂设计模式
+余浩 2018-11-12
 ![](https://static001.geekbang.org/resource/image/58/de/586df7bffcd89e32f9ec7b144bf0a4de.jpg)
-
-![7大设计原则](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
-
-![设计模式-创建型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
-
-![设计模式-结构型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
-
-![设计模式-行为型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
-
 ## 一、设计原则
+![7大设计原则](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbrlzsylj310k0l0k1l.jpg)
 
 ### 依赖倒置原则
 
@@ -25,7 +16,7 @@
 + [参考资料2](https://www.cnblogs.com/yulang314/p/3551586.html)
 
 ## 二、创建型
-
+![设计模式-创建型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
 ### 工厂方法模式
 
 > 定义一个专门创建对象的接口,让实现了这个接口的类来决定创建哪一个类的实例， **工厂方法让类的实例化过程推迟到子类中进行。**
@@ -109,8 +100,7 @@ public class Test {
 ```
 
 ## 三、结构型
-
-
+![设计模式-结构型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbp8k6plj313c0lkgwp.jpg)
 ### 代理模式
 
 > 代理模式：为其他对象提供一种代理,以控制对这个对象的访问;
@@ -441,7 +431,7 @@ OrderService dynamicProxy = (OrderService) new OrderServiceDynamicProxy(new Orde
 
 
 ## 三、行为型
-
+![设计模式-行为型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
 ### 模板方法模式
 
 > 模板方法模式：定义了一个算法的骨架,并允许子类为一个或者多个步骤提供实现;模板方法使得子类可以在不改变算法结构的情况下,重新定义算法的某些步骤。简而言之模板方法的目的是：让子类可以实现或者扩展父类中固定算法的某些部分。
