--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -17,6 +17,16 @@
 
 ## 二、创建型
 ![设计模式-创建型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbo9fy9qj31140k4gug.jpg)
+
+### 简单工厂
+> 由工厂对象决定创建哪一种产品类的实例，强调`创建产品`，不属于GOF23种设计模式之一。
+
+适用的场景：工厂类负责的产品类的数量较少。
+
+优点：只需要传入正确的参数，就可以获取的需要的对象，而无需关系该对象详细的创建的过程。
+
+缺点：工厂类的职责过重，当增加新的产品时，需要修改产品类的判断逻辑，违背开闭原则；无法形成基于继承的等级结构。
+
 ### 工厂方法模式
 
 > 定义一个专门创建对象的接口,让实现了这个接口的类来决定创建哪一个类的实例， **工厂方法让类的实例化过程推迟到子类中进行。**
