--- a/docs/notes/设计模式.md
+++ b/docs/notes/设计模式.md
@@ -27,7 +27,7 @@
 
 缺点：工厂类的职责过重，当增加新的产品时，需要修改产品类的判断逻辑，违背开闭原则；无法形成基于继承的等级结构。
 
-### 工厂方法模式
+### 工厂方法
 
 > 定义一个专门创建对象的接口,让实现了这个接口的类来决定创建哪一个类的实例， **工厂方法让类的实例化过程推迟到子类中进行。**
 
@@ -333,7 +333,7 @@ public class Test {
 
 ![](https://ws3.sinaimg.cn/large/006tKfTcgy1g0c3d3ilxhj30ma0aomyx.jpg)
 
-在测试类中通过 OrderServiceDynamicProxy 类的 bind() 钩子方法 返回通过反射生成的代理类的对象，动态生成的代理类是以class文件($Proxy0.class)的形式存在，通过对该class文件进行持久化，和通过jad反编译成java文件如下：
+在测试类中通过 OrderServiceDynamicProxy 类的 bind() 钩子方法 返回通过反射生成的代理类的对象，动态生成的代理类是以class文件(Proxy0.class)的形式存在，通过对该class文件进行持久化，和通过jad反编译成java文件如下：
 
 ```java
 public final class $Proxy0 extends Proxy implements OrderService {
@@ -443,7 +443,6 @@ OrderService dynamicProxy = (OrderService) new OrderServiceDynamicProxy(new Orde
 ## 三、行为型
 ![设计模式-行为型](https://ws2.sinaimg.cn/large/006tKfTcgy1g0dbq5lx67j31440lgaqg.jpg)
 ### 模板方法模式
-
 > 模板方法模式：定义了一个算法的骨架,并允许子类为一个或者多个步骤提供实现;模板方法使得子类可以在不改变算法结构的情况下,重新定义算法的某些步骤。简而言之模板方法的目的是：让子类可以实现或者扩展父类中固定算法的某些部分。
 
 模板方法的适用场景：
@@ -553,9 +552,145 @@ public class Test {
 
 ![](https://ws4.sinaimg.cn/large/006tKfTcgy1g0cudqknuvj30qq0du40m.jpg)
 
+### 策略模式
+>定义算法家族，分别封装起来，让它们之间可以相互替换，客户端动态的选择某种算法。此模式让算法的变化不会影响使用算法的用户。
+
+应用场景：下单时，满减、立减，优惠券等使用不同的策略。可以优雅的处理掉 if...else...
+
+缺点：客户端必须知道所有的策略类，并自行选择策略。
+
+> 假设不同用户下单买东西的折扣不一样。<br>
+> 1、外卖平台上的某家店铺为了促销，设置了多种会员优惠，其中包含超级会员折扣8折、普通会员折扣9折和普通用户没有折扣三种。<br>
+> 2、希望用户在付款的时候，根据用户的会员等级，就可以知道用户符合哪种折扣策略，进而进行打折，计算出应付金额。<br>
+> 3、随着业务发展，新的需求要求专属会员要在店铺下单金额大于30元的时候才可以享受优惠。<br>
+> 4、接着，又有一个变态的需求，如果用户的超级会员已经到期了，并且到期时间在一周内，那么就对用户的单笔订单按照超级会员进行折扣，并在收银台进行强提醒，引导用户再次开通会员，而且折扣只进行一次。
+
+定义一个接口：
+
+```java
+public interface UserPayService {
+    /**
+     * 计算应付价格
+     */
+    BigDecimal quote(BigDecimal orderPrice);
+}
+```
+
+定义不同策略实现类：
+
+```java
+//专属会员
+public class ParticularlyVipPayService implements UserPayService {
+    @Override
+    public BigDecimal quote(BigDecimal orderPrice) {
+         if (消费金额大于30元) {
+            return 7折价格;
+        }
+    }
+}
+//超级会员
+public class SuperVipPayService implements UserPayService {
+    @Override
+    public BigDecimal quote(BigDecimal orderPrice) {
+        return 8折价格;
+    }
+}
+//普通会员
+public class VipPayService implements UserPayService {
+    @Override
+    public BigDecimal quote(BigDecimal orderPrice) {
+        if(该用户超级会员刚过期并且尚未使用过临时折扣){
+            临时折扣使用次数更新();
+            returen 8折价格;
+        }
+        return 9折价格;
+    }
+}
+```
+
+客户端类：
+
+```java
+public BigDecimal calPrice(BigDecimal orderPrice,User user) {
+
+     String vipType = user.getVipType();
+
+     if (vipType == 专属会员) {
+        UserPayService strategy = new ParticularlyVipPayService();
+        return strategy.quote(orderPrice);
+     }
+     if (vipType == 超级会员) {
+        UserPayService strategy = new SuperVipPayService();
+        return strategy.quote(orderPrice);
+     }
+     if (vipType == 普通会员) {
+        UserPayService strategy = new VipPayService();
+        return strategy.quote(orderPrice);
+     }
+     return 原价;
+}
+```
+
+由上述代码可知，在客户端必须判断并选择需要的策略类，并没有完全消灭 if else，这一点可以通过引入工厂模式解决
+
+```java
+public class UserPayServiceStrategyFactory {
+	 // 保存所有的策略
+    private static Map<String,UserPayService> services = new ConcurrentHashMap<String,UserPayService>();
+	 // 获取指导类型的策略
+    public  static UserPayService getByUserType(String type){
+        return services.get(type);
+    }
+	 // 注册策略
+    public static void register(String userType,UserPayService userPayService){
+        Assert.notNull(userType,"userType can't be null");
+        services.put(userType,userPayService);
+    }
+}
+```
+
+此时客户端代码可以改为：
+
+```java
+public BigDecimal calPrice(BigDecimal orderPrice,User user) {
+     String vipType = user.getVipType();
+     UserPayService strategy = UserPayServiceStrategyFactory.getByUserType(vipType);
+     return strategy.quote(orderPrice);
+}
+```
+
+
+还记得我们前面定义的UserPayServiceStrategyFactory中提供了的register方法吗？他就是用来注册策略服务的。
+
+接下来，我们就想办法调用register方法，把Spring通过IOC创建出来的Bean注册进去就行了。
+
+这种需求，可以借用Spring种提供的InitializingBean接口，这个接口为Bean提供了属性初始化后的处理方法，它只包括afterPropertiesSet方法，凡是继承该接口的类，在bean的属性初始化后都会执行该方法。
+
+那么，我们将前面的各个策略类稍作改造即可：
+
+```java
+@Service
+public class ParticularlyVipPayService implements UserPayService,InitializingBean {
+    @Override
+    public BigDecimal quote(BigDecimal orderPrice) {
+         if (消费金额大于30元) {
+            return 7折价格;
+        }
+    }
+    @Override
+    public void afterPropertiesSet() throws Exception {
+        UserPayServiceStrategyFactory.register("ParticularlyVip",this);
+    }
+}
+```
+
+只需要每一个策略服务的实现类都实现InitializingBean接口，并实现其afterPropertiesSet方法，在这个方法中调用UserPayServiceStrategyFactory.register即可。
+
+这样，在Spring初始化的时候，当创建VipPayService、SuperVipPayService和ParticularlyVipPayService的时候，会在Bean的属性初始化之后，把这个Bean注册到UserPayServiceStrategyFactory中。
+
+
 
 ### 责任链模式
-
 > 为一个请求创建一个接收此次请求对象的一个链条。
 
 责任链模式的适用场景有：
@@ -568,7 +703,6 @@ public class Test {
 
 
 >假设有如下的业务场景：某视频网站需要对上架的视频课程进行审核（检查是否有手记和视频）如果都有则允许上架，没有则不允许上架，首先审核的是是否含有手记。
-
 
 课程实体类：
 
