--- a/docs/article/一次服务器调优.md
+++ b/docs/article/一次服务器调优.md
@@ -34,3 +34,25 @@
 + [参考资料2](https://blog.csdn.net/Ki8Qzvka6Gz4n450m/article/details/93377331)
 + [jstat命令使用](https://www.cnblogs.com/yjd_hycf_space/p/7755633.html)
 + [jstat命令官方文档](https://docs.oracle.com/javase/1.5.0/docs/tooldocs/share/jstat.html)
+
+
+
+### 记一次 JAVA StackOverFlowError 异常
+
+> 背景：昨天同事的一段程序出现了StackOverFlowError 异常，问我怎么处理，我看了下代码，在这段代码里有递归，递归写的正确，有出口，但是递归的层级一点深，一共有2600级，递归到 2200 左右是抛出 StackOverFlowError 异常
+
+我分析了一下，出现该异常是由于递归的调用是这个一个线程中的，JVM 默认给一个线程分配的内存空间是 1M 大小，加上由于递归调用比较深，压栈比较多，导致分配给线程的内存空间耗尽，出现 StackOverFlowError 异常。
+
+对此我给出 3 个解决方案
+
+1、不使用递归
+
+2、使用多线程的并发递归
+
+3、设置 JVM 启动参数 -Xss2M 将分配给线程的默认内存空间调大
+
+`java -Xss2M -jar test.jar`
+
++ [参考资料1](http://club.oneapm.com/t/stackoverflowerror/1295)
++ [参考资料2](https://www.cnblogs.com/ceshi2016/p/8447989.html)
+
