一次服务器调优.md

--- a/docs/content/article/一次服务器调优.md
+++ b/docs/content/article/一次服务器调优.md
@@ -9,11 +9,11 @@
 
 将堆栈信息文本上传到 [fastThread](https://fastthread.io/) 网站进行分析。
 
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g9dr46kk6jj323a0u0aes.jpg)
+![022249](http://image.yuhaowin.com/2020/03/15/022249.jpg)
 
 从分析结果发现 `java.util.zip.ZipFile $ ZipFileInputStream.read` 方法被大量调用，此方法是 jdk 中的方法，我也没有手动调用过，查看该该部分源码发现该该方法还加了同步锁。
 
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g9dr9mworrj31ta0egab6.jpg)
+![022350](http://image.yuhaowin.com/2020/03/15/022350.jpg)
 
 因此，必须找到为何会频繁调用此方法，在本地 debug 发现，在调用webservice 接口前，要创建代理对象，创建代理对象的过程中会调用这个方法，而且没请求一次，就会重新创建一个代理对象。至此找到了 cpu 占用率飙升的原因。
 
@@ -21,25 +21,20 @@
 
 使用单例模式创建代理对象，使得代理对象只需要创建一次。
 
-
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g9drklulcjj31qg0p4adg.jpg)
-
+![022436](http://image.yuhaowin.com/2020/03/15/022436.jpg)
 
 验证：修改代码后，重新进行压测。发现 cpu 占用率维持在30%左右，并对压测时的线程堆栈信息进行分析。
 
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g9ds60jt9aj32cy0u0781.jpg)
-
+![022510](http://image.yuhaowin.com/2020/03/15/022510.jpg)
 
 + [参考资料1](https://blog.csdn.net/u013630349/article/details/99886088)
 + [参考资料2](https://blog.csdn.net/Ki8Qzvka6Gz4n450m/article/details/93377331)
 + [jstat命令使用](https://www.cnblogs.com/yjd_hycf_space/p/7755633.html)
 + [jstat命令官方文档](https://docs.oracle.com/javase/1.5.0/docs/tooldocs/share/jstat.html)
 
+## 记一次 JAVA StackOverFlowError 异常
 
-
-### 记一次 JAVA StackOverFlowError 异常
-
-> 背景：昨天同事的一段程序出现了StackOverFlowError 异常，问我怎么处理，我看了下代码，在这段代码里有递归，递归写的正确，有出口，但是递归的层级一点深，一共有2600级，递归到 2200 左右是抛出 StackOverFlowError 异常
+> 背景：昨天同事的一段程序出现了StackOverFlowError 异常，问我怎么处理，我看了下代码，在这段代码里有递归，递归写的正确，有出口，但是递归的层级有点深，一共有 2600 级，递归到 2200 左右是抛出 StackOverFlowError 异常。
 
 我分析了一下，出现该异常是由于递归的调用是这个一个线程中的，JVM 默认给一个线程分配的内存空间是 1M 大小，加上由于递归调用比较深，压栈比较多，导致分配给线程的内存空间耗尽，出现 StackOverFlowError 异常。
 
@@ -55,4 +50,50 @@
 
 + [参考资料1](http://club.oneapm.com/t/stackoverflowerror/1295)
 + [参考资料2](https://www.cnblogs.com/ceshi2016/p/8447989.html)
+
+
+## 记一次 被 static 修饰的、引用类型的成员变量被修改记录
+
+> 背景：同事咨询我一个 bug，说是有一个 domian 类的一个属性 是 List 类型的，被 static 关键字修饰了，这个属性只在创建对象的时候初始化了值，并且只提供了一个 getter，按理说这个属性的值是永远不变的，但是随着项目的运行，这个 List 的 size 在不断的增长。
+
+```java
+public class Order {
+    private static List<Integer> orderIds = new ArrayList<>(Arrays.asList(,2,3,4,5));
+    public List<Integer> getOrderIds() {
+        return orderIds;
+    }
+}
+```
+
+随着时间的推移，getOrderIds 得到的 List 的长度越来越大。
+
+
+
+分析：
+
+orderIds 是引用类型的变量，即使没有 setter 可以修改值，但是依然可以通过 getter 获取到其引用，然后再修改值，那么这个属性值就成功的被修改了。并在这个变量是被 static 修饰，表面这个属性属于类的，任何一个对象将其修改了，对其他对象都生效。
+
+```java
+    public static void main(String[] args) {
+        Order order = new Order();
+        List<Integer> orderIds = order.getOrderIds();
+        orderIds.add(6);
+        Order orderNew = new Order();
+        System.out.println(orderNew.getOrderIds());
+    		//[1, 2, 3, 4, 5, 6]
+    }
+```
+
+但是我查看项目的源码，并没有发现这个 getter 被调用过。我猜测是在通过 POST 接口新增一条记录时，用 Order 对象接收的，并且参数中是包含这个属性的。
+
+```java
+    @PostMapping("/add-order")
+    public Object createOrder(@RequestBody Order order) {
+        System.out.println(order.getOrderIds());
+        //[1, 2, 3, 4, 5, 1, 2, 3, 4, 5,]
+        return order;
+    }
+```
+
+结果证实了我的猜想。
 
